--- a/btb/app/gcp/functions/auth/auth.pug
+++ b/btb/app/gcp/functions/auth/auth.pug
@@ -6,7 +6,7 @@ html(lang="en")
   h3 #{client_id} is requesting access to your account.
   p.
     Sign in to grant #{client_id} access.
-  form(action='https://us-central1-testbed-195403.cloudfunctions.net/signin', method='POST')
+  form(action='https://europe-central2-soy-totem-335520.cloudfunctions.net/auth/sign-in', method='POST')
     p.
       Username 
     input(type='text' name='username')
